<resources>
    <string name="app_name">Project2_Prototype</string>
    <string name="menu_title_text">Menu</string>
    <string name="menu_button1_text">Play</string>
    <string name="menu_button2_text">Options</string>
    <string name="play_title_text">Play</string>
    <string name="play_button1">Game Mode 1</string>
    <string name="play_button2">Game Mode 2</string>
    <string name="play_button3">Game Mode 3</string>
    <string name="play_button4">Game Mode 4</string>
    <string name="play_button5">Test Colors</string>
    <string name="play_button6">Custom Game Mode</string>
    <string name="money">Money:</string>
    <string name="player">Player:</string>
    <string name="money_difference">Money difference:</string>
    <string name="winner">Winner</string>    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_title_text">Number Of Players</string>
    <string name="play">PLAY</string>
    <string name="end_button1_text">Menu</string>
    <string name="end_button2_text">Top players</string>
    <string name="Toplist_button1_text">Back to menu</string>
    <string name="menu_button3_text">Top players</string>
</resources>
